--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,13 +1,12 @@
 <div class="container">
   <div class="row">
-    <%= simple_form_for :search, url: root_path, method: "GET", html: { class: 'form-inline' } do |f| %>
-      <%= f.input :name, input_html: {value: ""} %>
-      <%= f.submit "Search", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-
-  <div class="row">
     <div class="col-xs-12 col-sm-8 offset-sm-2">
+      <div class="my-4">
+        <%= simple_form_for :search, url: root_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+          <%= f.input :name, label: false, input_html: { value: "" } %>
+          <%= f.submit "Search", class: "btn btn-primary" %>
+        <% end %>
+      </div>
       <h1>Cocktails</h1>
       <% @cocktails.each do |cocktail| %>
         <h3><%= cocktail.name %></h3>
